--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -4,11 +4,57 @@ on:
   deployment_status:
     
 jobs:
+  check-pr-status:
+    name: Check if PR is open
+    runs-on: ubuntu-latest
+    if: github.event.deployment_status.state == 'success'
+    outputs:
+      pr-open: ${{ steps.pr-check.outputs.pr-open }}
+      pr-number: ${{ steps.pr-check.outputs.pr-number }}
+    steps:
+      - name: Check PR status
+        id: pr-check
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            try {
+              // Find PR associated with this deployment
+              const { data: prs } = await github.rest.repos.listPullRequestsAssociatedWithCommit({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                commit_sha: context.payload.deployment.sha
+              });
+              
+              if (prs.length === 0) {
+                console.log('No PR found for this deployment');
+                core.setOutput('pr-open', 'false');
+                core.setOutput('pr-number', '');
+                return;
+              }
+              
+              const pr = prs[0];
+              const isOpen = pr.state === 'open';
+              
+              console.log(`Found PR #${pr.number}, state: ${pr.state}`);
+              core.setOutput('pr-open', isOpen.toString());
+              core.setOutput('pr-number', pr.number.toString());
+              
+              if (!isOpen) {
+                console.log(`Skipping tests - PR #${pr.number} is ${pr.state}`);
+              }
+            } catch (error) {
+              console.error('Error checking PR status:', error);
+              core.setOutput('pr-open', 'false');
+              core.setOutput('pr-number', '');
+            }
+
   stable-tests:
     name: Stable E2E Tests (Blocking)
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: github.event.deployment_status.state == 'success'
+    needs: check-pr-status
+    if: needs.check-pr-status.outputs.pr-open == 'true'
     permissions:
       actions: read
       contents: read
@@ -190,7 +236,8 @@ jobs:
     name: Experimental E2E Tests (Non-blocking)
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: github.event.deployment_status.state == 'success'
+    needs: check-pr-status
+    if: needs.check-pr-status.outputs.pr-open == 'true'
     permissions:
       actions: read
       contents: read
