--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,8 +1,7 @@
 name: CI/CD Pipeline
 
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+
+on: pull_request
 
 jobs:
   checks:
@@ -33,7 +32,6 @@ jobs:
     name: Deploy Preview
     runs-on: ubuntu-latest
     needs: checks
-    if: github.event_name == 'pull_request'
     permissions:
       contents: read
       pull-requests: write
@@ -90,7 +88,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: deploy-preview
-    if: github.event_name == 'pull_request'
     permissions:
       actions: read
       contents: read
@@ -106,7 +103,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
+          node-version-file: .nvmrc
           cache: 'npm'
           cache-dependency-path: test-automation/package-lock.json
 
@@ -243,7 +240,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: deploy-preview
-    if: github.event_name == 'pull_request'
     permissions:
       actions: read
       contents: read
