--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -45,8 +45,9 @@ jobs:
       - name: Deploy to Vercel
         id: deploy
         run: |
-          # Deploy with public access for E2E testing
-          DEPLOY_OUTPUT=$(npx vercel --token ${{ secrets.VERCEL_TOKEN }} --yes --confirm --public 2>&1)
+          # Try deploying with public flag and scope
+          echo "Deploying with public access..."
+          DEPLOY_OUTPUT=$(npx vercel --token ${{ secrets.VERCEL_TOKEN }} --yes --confirm --public --scope good-party 2>&1)
           echo "$DEPLOY_OUTPUT"
           
           # Extract the preview URL from the output
@@ -59,17 +60,6 @@ jobs:
           
           echo "preview-url=$DEPLOYMENT_URL" >> $GITHUB_OUTPUT
           echo "Deployment successful: $DEPLOYMENT_URL"
-          
-          # Wait for deployment to be ready
-          echo "Waiting for deployment to be accessible..."
-          for i in {1..30}; do
-            if curl -s -o /dev/null -w "%{http_code}" "$DEPLOYMENT_URL" | grep -q "200\|301\|302"; then
-              echo "Deployment is ready!"
-              break
-            fi
-            echo "Attempt $i: Deployment not ready yet, waiting 10 seconds..."
-            sleep 10
-          done
           
       - name: Comment PR with deployment info
         uses: actions/github-script@v7
